# resume_skills

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: Testing donut.ipynb  Testing trained model.ipynb  Testing_OpenAI.ipynb  Testing_trained _model.ipynb
src/resume_skills/: dataset.py  train.py
src/resume_skills/env/: setings.py
